--- a/client/src/App.css
+++ b/client/src/App.css
@@ -113,11 +113,11 @@ form button {
 }
 
 .bookResult img {
-  border: 1px solid red;
-  /* display: inline-block; */
+  display: inline-block;
   box-sizing: border-box;
-  min-width: 100px;
-  min-height: 50px;
+  max-width: 100px;
+  max-height: auto;
+  margin-right: 2vw;
 }
 
 .aboutBook {
